--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,9 @@ main{
     margin-top: 70px;
 }
 
-/* aside{
-    width: 80px;
-} */
+
 
 #content{
-    /* width: calc(100vw - 80px); */
+    flex-grow: 1;
     height: 100%;
 }
