--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,10 @@ main{
     margin-top: 70px;
 }
 
-
+aside{
+    width: 80px;
+}
 
 #content{
-    flex-grow: 1;
-    height: 100%;
+    width: calc(100vw - 80px);
 }
