creato content con 2 colonne responsive

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,9 @@
 .ms_debug-bg-color-lighter{
     background-color: rgb(153, 255, 221);
 }
-
+.ms_debug-bg-color-pink{
+background-color: pink;
+}
 
 
 
