creati cards layout responsive

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
 }
 
 .ms_debug-bg-color-dark{
-    background-color: rgb(200, 97, 1);
+    background-color: rgba(57, 50, 50, 0.613);
 }
 
 .ms_debug-bg-color-grey{
