--- a/css/style.css
+++ b/css/style.css
@@ -43,8 +43,9 @@
 :root{
     --primary-color: #1b72e8;
     --primary-dark-color: #0b54b7;
-    --secondary-color: #d4d9dd;
-    --secondary-dark-color: #c0c3c6bd;
+    --secondary-color: #bebec0;
+    --secondary-light-color: #ebebeb;
+    --secondary-dark-color: #a8a4a49c;
     --tertiary-color: #051e34;
     --orange-color: #f2614c;
     --green-color: #198754;
@@ -75,6 +76,16 @@ header{
 .navbar{
     background-color:var(--white-color);
 }
+
+
+.navbar input{
+    background-color: var(--secondary-dark-color);
+}
+
+.navbar input::placeholder{
+    color: var(--secondary-light-color);
+}
+
 .input-group i{
     text-decoration: none;
     margin-left:10px;
@@ -84,6 +95,8 @@ header{
 .input-group .fa-bell{
     color: var(--gold-color);
 }
+
+
 
 /**********MAIN********/
 
@@ -134,6 +147,24 @@ main{
 /*********media query*********/
 
 
+/*MD*/
+@media all and (min-width: 768px) {
+    
+    #content-top-1{
+        order: 3;
+    }
+    
+    #content-top-2{
+        order: 1;
+    }
+    
+    #content-top-3{
+        order: 2;
+    }
+}
+
+
+
 /*LG*/
 @media all and (min-width: 992px) {
 
@@ -152,4 +183,5 @@ main{
     #content{
         width: calc(100vw - 100px);
     }
+
 }
